refactor: make backend compatible with new schema
