# docs/swagger.json
@@ -820,14 +820,17 @@
                 "group_name": {
                     "type": "string"
                 },
-                "last_message_content": {
-                    "type": "string"
-                },
                 "last_message_created_at": {
                     "type": "string"
                 },
                 "last_message_id": {
                     "type": "integer"
+                },
+                "last_message_text": {
+                    "type": "string"
+                },
+                "last_message_type": {
+                    "$ref": "#/definitions/model.MessageType"
                 },
                 "updated_at": {
                     "type": "string"
@@ -1035,6 +1038,15 @@
                     }
                 }
             }
+        },
+        "model.MessageType": {
+            "type": "string",
+            "enum": [
+                "text"
+            ],
+            "x-enum-varnames": [
+                "MessageTypeText"
+            ]
         }
     },
     "securityDefinitions": {
