# internal/delivery/websocket/dto/response.go
@@ -13,40 +13,56 @@ type WSResponse struct {
 	Data      any       `json:"data"`
 }
 type MessageCreateResponse struct {
-	ID             int64     `json:"id"`
-	ConversationID uuid.UUID `json:"conversation_id"`
-	SenderID       uuid.UUID `json:"sender_id"`
-	Content        string    `json:"content"`
-	CreatedAt      time.Time `json:"created_at"`
-	UpdatedAt      time.Time `json:"updated_at"`
+	ID             int64             `json:"id"`
+	ConversationID uuid.UUID         `json:"conversation_id"`
+	SenderID       uuid.UUID         `json:"sender_id"`
+	Type           model.MessageType `json:"type"`
+	Text           *TextMessage      `json:"text,omitempty"`
+	CreatedAt      time.Time         `json:"created_at"`
+	UpdatedAt      time.Time         `json:"updated_at"`
 }
 
 func ToMessageCreateResponse(msg model.Message) MessageCreateResponse {
+	var text *TextMessage
+	if msg.Type == model.MessageTypeText {
+		text = &TextMessage{
+			Content: msg.Text.Content,
+		}
+	}
 	return MessageCreateResponse{
 		ID:             msg.ID,
 		ConversationID: msg.ConversationID,
 		SenderID:       msg.SenderID,
-		Content:        msg.Content,
+		Type:           msg.Type,
+		Text:           text,
 		CreatedAt:      msg.CreatedAt,
 		UpdatedAt:      msg.UpdatedAt,
 	}
 }
 
 type MessageEditResponse struct {
-	ID             int64     `json:"id"`
-	ConversationID uuid.UUID `json:"conversation_id"`
-	SenderID       uuid.UUID `json:"sender_id"`
-	Content        string    `json:"content"`
-	CreatedAt      time.Time `json:"created_at"`
-	UpdatedAt      time.Time `json:"updated_at"`
+	ID             int64             `json:"id"`
+	ConversationID uuid.UUID         `json:"conversation_id"`
+	SenderID       uuid.UUID         `json:"sender_id"`
+	Type           model.MessageType `json:"type"`
+	Text           *TextMessage      `json:"text,omitempty"`
+	CreatedAt      time.Time         `json:"created_at"`
+	UpdatedAt      time.Time         `json:"updated_at"`
 }
 
 func ToMessageEditResponse(msg model.Message) MessageEditResponse {
+	var text *TextMessage
+	if msg.Type == model.MessageTypeText {
+		text = &TextMessage{
+			Content: msg.Text.Content,
+		}
+	}
 	return MessageEditResponse{
 		ID:             msg.ID,
 		ConversationID: msg.ConversationID,
 		SenderID:       msg.SenderID,
-		Content:        msg.Content,
+		Type:           msg.Type,
+		Text:           text,
 		CreatedAt:      msg.CreatedAt,
 		UpdatedAt:      msg.UpdatedAt,
 	}
@@ -55,4 +71,8 @@ func ToMessageEditResponse(msg model.Message) MessageEditResponse {
 type MessageDeleteResponse struct {
 	ID             int64     `json:"id"`
 	ConversationID uuid.UUID `json:"conversation_id"`
+}
+
+type TextMessage struct {
+	Content string `json:"content,omitempty"`
 }
